Add target blank attribute, add favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
 <head>
 
+	<!-- Load favicon -->
+	<link href="./resources/favicon.ico" rel="icon" type="image/x-icon" />
+
 	<!-- Load stylesheets -->
 	<link href="./resources/stylesheets/styles.css" rel="stylesheet" />
 	
@@ -15,7 +18,7 @@
 
 	<div id="container">
 	
-		<div id="github-link"><a href="https://github.com/Jturtle23">Made by Jonah A.</a></div>
+		<div id="github-link"><a href="https://github.com/Jturtle23" target="_blank">Made by Jonah A.</a></div>
 		
 		<p>Mrs. Frisby and the Rats of NIMH</p>
 		<p>Maze game timer</p>
