Make minor structure edits.

--- a/index.html
+++ b/index.html
@@ -21,19 +21,25 @@
 
 	<div id="container">
 	
-		<div id="github-link"><a href="https://github.com/Jturtle23" target="_blank">Made by Jonah A.</a></div>
+		<div id="header">
 		
-		<p>Mrs. Frisby and the Rats of NIMH</p>
-		<p>Maze game timer</p>
+			<div id="github-link"><a href="https://github.com/Jturtle23" target="_blank">Made by Jonah A.</a></div>
 		
+			<h2>Mrs. Frisby and the Rats of NIMH</h2>
+			<p>Maze game timer</p>
+			
+		</div>
 		
 
 		<div id="players-container"></div>
 	
-		<input id="player-name-input" type="text" placeholder="Name new player..."></input>
-		<button id="add-player-button" type="button">Add player</button>
+		<div id="controls-interface-container">
 		
-		<button id="roll-die">Roll die!</button>
+			<input id="player-name-input" type="text" placeholder="Name new player..."></input>
+			<button id="add-player-button" class="controls-interface-button" type="button">Add player</button>
+			<button id="roll-die-button" class="controls-interface-button">Roll die</button>
+			
+		</div>
 	
 	</div> <!-- /container -->
 	
