--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
 	<div id="container">
 	
-		<div id="header">
+		<header>
 		
 			<div id="github-link"><a href="https://github.com/Jturtle23" target="_blank">Made by Jonah A.</a></div>
 		
 			<h2>Mrs. Frisby and the Rats of NIMH</h2>
 			<p>Maze game timer</p>
 			
-		</div>
+		</header>
 		
 
 		<div id="players-container"></div>
