Fix syntax error: closing </input> tag

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	
 		<div id="controls-interface-container">
 		
-			<input id="player-name-input" type="text" placeholder="Name new player..."></input>
+			<input id="player-name-input" type="text" placeholder="Name new player..." />
 			<button id="add-player-button" class="controls-interface-button" type="button">Add player</button>
 			<button id="roll-die-button" class="controls-interface-button">Roll die</button>
 			
